# libtex3ds

./: .gitignore  CMakeLists.txt  README.md  build.sh
docs/: api-en.md  api-fr.md
example/: main.cpp  makefile  output.t3x
example/arm-3ds/include/: subimage.h
example/arm-3ds/source/: libtex3ds.cpp  main.cpp
include/: subimage.h
source/: libtex3ds.cpp  rg_etc1.cpp
